css/default.css
/*

HRM default style

This file is part of the Huygens Remote Manager
Copyright and license notice: see license.txt

*/

/* *** Font faces *********************************************************** */

@font-face {
    font-family: 'ubuntu_font';
    src: url('Ubuntu-Regular-webfont.eot');
    src: url('Ubuntu-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('Ubuntu-Regular-webfont.woff') format('woff'),
         url('Ubuntu-Regular-webfont.ttf') format('truetype'),
         url('Ubuntu-Regular-webfont.svg#UbuntuRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* basic elements */

body {
    background: #fff;
    color: #000;
    font-family: ubuntu_font;
    font-size: 14px;
    text-align: center;
    margin: 0px;
}

pre {
    font-size: 12px;
}

a:link {
    color: #4988de;
    text-decoration: none;
}

a:visited {
    color: #4988de;
    text-decoration: none;
}

a:hover, a:active {
    color: #2733ff;
}

h1 {
    font-size: 32px;
    margin-top: 20px;
}

h2 {
    font-size: 20px;
    margin-top: 15px;
}

h4 {
    font-size: 14px;
    font-weight: bold;
}

p {
    text-align: left;
}

img {
    vertical-align: middle;
    border: none;
}

textarea {
    width: 100%;
}

table {
    width: 100%;
    border-collapse: collapse;
}

/* specific div elements */

.intro {
    font-size: 16px;
    padding-top: 15px;
    border-top-style: dotted;
    border-top-width: 1px;
    padding-bottom: 15px;
    border-bottom-style: dotted;
    border-bottom-width: 1px;
    line-height: 1.5;
}

#basket {
    width: 800px;
    border: #ccc 2px solid;
    margin: 0px auto 0px auto;
}

#title {
    position: relative;
    height: 86px;
    background: url(../images/title_bkg.png) repeat-x top left;
    padding-left: 180px;
    border: #fff 2px solid;
    color: white;
}

#logo {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 186px;
    height: 86px;
    background: url(../images/logo.png) no-repeat top left;
}

#stats {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

#statschart {
    width: 800px;
    height: 400px;
    margin: 16px 0px 10px 0px;
    border-top: #ccc 1px dotted;
}

#statstable {
    font-weight: normal;
    font-size: 0.7em;
    margin-left: 50px;
    margin-right: 50px;
    border-top: #ccc 1px dotted;
}

#statstable h3 {
    color: rgb(62,87,111);
    font-family: ubuntu_font;
    font-weight: normal;
    font-size: 16px;
}

#statstable table {
    margin-bottom: 20px;
}

#statstable table th {
    text-align: center;
    font-weight: bold;
    background-color: #eee;
}

#nav {
    color: #888;
    font-size: 12px;
    font-weight: bold;
    text-align: right;
    border-top: #ccc 2px solid;
    border-bottom: #ccc 2px solid;
}

#nav ul {
    list-style-type: none;
    padding: 2px 0px 4px 6px;
    margin: 0px;
}

#nav li {
    display: inline;
    padding-right: 10px;
}

#nav a:link {
    font-weight: bold;
    color: #000;
}

#nav a:visited {
    font-weight: bold;
    color: #000;
}

#controls {
    text-align: center;
    border-top: #ccc 1px dotted;
    margin-top: 30px;
    width: 100%;
}

#content {
    float: left;
    width: 480px;
    text-align: left;
    border-right-style: dotted;
    border-right-width: 1px;
    margin: 0px 0px 0px 0px;
    padding: 0px 15px 0px 15px;
}

#content h3 {
  background-color: #eee;
  font-size: 16px;
  height: 40px;
  font-weight: bold;
  text-align: center;
}

#content h4 {
    font-size: 12px;
    font-weight: bold;
    text-align: justify;
}

#content p {
    text-align: justify;
}

#separator {
  width: 1200px;
  border-width: 1px;
  border-style: solid;
  border-color: #CCCCCC;
  margin: 20px 0px 20px 0px;
}

#logos {
    font-size: 70%;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 3em;
}

#logos div {
    float: left;
    width: 150px;
    padding-right: 4px;
    padding-bottom: 1em;
    padding-left: 4px;
}

#logos div p {
    text-align: center;
    padding-right: 5px;
    padding-left: 5px;
}

#templates select {
    width: 100%;
}

#userfiles select {
    width: 100%;
    text-align: left;
}

#selection {
    font-size: 0.8em;
    text-align: center;
}

#selection select {
    width: 50%;
}

#selection input {
    vertical-align: middle;
}

#up_form {
    font-size: 0.8em;
    text-align: center;
}

#up_form input {
    vertical-align: middle;
}

#upload_list {
    padding: 15px;
    margin: 15px;
    border: #ccc 2px solid;
}

#upload_list input {
    width: 90%;
}

#settings select {
    width: 100%;
}

#selectedfiles select {
    width: 100%;
    text-align: left;
}

#upMsg {
    text-align: center;
    font-size: 70%;
    padding: 5px 0 0 0;
}

input.copy {
    background: url(../images/copy.png) no-repeat center;
}

input.down {
    background: url(../images/add.png) no-repeat center;
}

input.remove {
    background: url(../images/remove.png) no-repeat center;
}

input.create {
    background: url(../images/create.png) no-repeat center;
}

input.edit {
    background: url(../images/edit.png) no-repeat center;
}

input.clone {
    background: url(../images/clone.png) no-repeat center;
}

input.mark {
    background: url(../images/mark.png) no-repeat center;
}

input.delete {
    background: url(../images/delete.png) no-repeat center;
}

input.update {
    background: url(../images/update.png) no-repeat center;
}

input.download {
    background: url(../images/download.png) no-repeat center;
}
input.upload {
    background: url(../images/upload.png) no-repeat center;
}

input.save {
    width: 60px;
    height: 60px;
    background: url(../images/save.png) no-repeat center;
}

#actions label {
    display: block;
    margin-top: 20px;
    margin-bottom: 20px;
    padding-left: 5px;
}

#actions {
    text-align: center;
    font-size: 70%;
    padding: 5px 0 0 0;
}

#login {
    font-size: 14px;
}
/* ... */

